---
config:
  layout: elk
---
erDiagram
	direction LR
	USER {
		int UserID PK ""  
		string Email  ""  
		string Name  ""  
	}

	JOB_APPLICATION {
		int JobID PK ""  
		string JobTitle  ""  
		string Company  ""  
		int Salary  ""  
		date AppliedDate  ""  
		date ClosingDate  ""  
		date CreatedDate  ""  
		date UpdatedDate  ""  
		boolean IsFavourited  ""  
		int UserID FK ""  
		int JobStatusID FK ""  
		int JobTypeID FK ""  
		int LocationID FK ""  
	}

	FILE {
		int FileID PK ""  
		string FileName  ""  
		string ContentType  ""  
		string Description  ""  
		int JobID FK ""  
	}

	JOB_STATUS {
		int JobStatusID PK ""  
		string StatusName  ""  
	}

	JOB_TYPE {
		int JobTypeID PK ""  
		string TypeName  ""  
	}

	LOCATION {
		int LocationID PK ""  
		string LocationName  ""  
	}

	USER||--o{JOB_APPLICATION:"submits"
	JOB_APPLICATION||--o{FILE:"attaches"
	JOB_APPLICATION}o--||JOB_STATUS:"has"
	JOB_APPLICATION}o--||JOB_TYPE:"classified_as"
	JOB_APPLICATION}o--||LOCATION:"located_in"